glib-macros/tests/closure_compiletest/02-closure-no-move.rs
fn main() {
    use glib::closure;
    let v = std::rc::Rc::new(1);
    closure!(#[weak] a, #[weak] b, |x| {});
}
